修改：    Input实现调整，考虑X按钮

--- a/.flowconfig
+++ b/.flowconfig
@@ -1,9 +1,14 @@
 [ignore]
-
+.*/node_modules/.*
+.*/build/.*
+.*/config/.*
+.*/public/.*
+.*/scripts/.*
 [include]
-
+src
 [libs]
-
+flow-typed/
+src/interface/
 [options]
 
 [lints]
