--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
+    "debug": "^2.6.8",
     "dotenv": "4.0.0",
     "eslint": "3.19.0",
     "eslint-config-react-app": "1.0.5",
