修改：   * 改为采用styled-compoent作为组件的样式处理。   * 奉行style in js 规则。

--- a/.flowconfig
+++ b/.flowconfig
@@ -4,11 +4,14 @@
 .*/config/.*
 .*/public/.*
 .*/scripts/.*
+.*/flow-typed/.*
 [include]
 src
 [libs]
 flow-typed/
 src/interface/
+node_modules/vx-mock/interface
 [options]
+module.name_mapper='^core/\(.*\)$' -> '<PROJECT_ROOT>/src/core/\1'
 
 [lints]
