--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "15.6.1",
     "react-error-overlay": "1.0.9",
     "style-loader": "0.18.2",
+    "styled-components": "^2.1.1",
     "sw-precache-webpack-plugin": "0.11.3",
     "url-loader": "0.5.9",
     "webpack": "2.6.1",
@@ -51,8 +52,13 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
+    "chai": "^4.1.0",
+    "enzyme": "^2.9.1",
     "flow-bin": "0.51.0",
-    "jest-cli": "^20.0.4"
+    "identity-obj-proxy": "^3.0.0",
+    "jest-cli": "^20.0.4",
+    "react-test-renderer": "^15.6.1",
+    "vx-mock": "^0.1.3"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -76,7 +82,9 @@
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
     ],
     "moduleNameMapper": {
-      "react-native$": "react-native-web"
+      "react-native$": "react-native-web",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
     },
     "moduleFileExtensions": [
       "web.js",
