--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "author": "ysstech",
   "scripts": {
+    "lint:css": "stylelint './src/widgets/**/*.js'",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
@@ -58,6 +59,9 @@
     "identity-obj-proxy": "^3.0.0",
     "jest-cli": "^20.0.4",
     "react-test-renderer": "^15.6.1",
+    "stylelint": "^8.0.0",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-processor-styled-components": "^0.2.1",
     "vx-mock": "^0.1.3"
   },
   "jest": {
