--- a/.eslintrc
+++ b/.eslintrc
@@ -71,7 +71,7 @@
     "no-cond-assign": "error",
     "no-dupe-keys": "error",
     "no-console": [
-      "error",
+      "warn",
       {
         "allow": [
           "warn",
