修改：    * 完善测试用例    * 将Input生成独立成一个方法。

--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
       "<rootDir>/config/polyfills.js"
     ],
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.js?(x)",
+      "<rootDir>/src/**/__tests__/**/?(*.)(spec|test).js?(x)",
       "<rootDir>/src/**/?(*.)(spec|test).js?(x)"
     ],
     "testEnvironment": "node",
