修改：    * 补充覆盖率脚本。

--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "lint:css": "stylelint './src/widgets/**/*.js'",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "cover": "jest --env=jsdom  --coverage"
   },
   "devDependencies": {
     "chai": "^4.1.0",
