修改：   *  修正无法更新问题。

--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
     "promise": "7.1.1",
+    "prop-types": "15.x",
+    "rc-align": "2.x",
+    "rc-animate": "2.x",
+    "rc-util": "4.x",
     "react": "15.6.1",
     "react-dev-utils": "3.0.2",
     "react-dom": "15.6.1",
