--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
-    "babel-loader": "7.0.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-react-app": "3.0.1",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
@@ -32,7 +32,8 @@
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
     "promise": "7.1.1",
-    "prop-types": "15.x",
+    "prop-types": "^15.5.10",
+    "prop-types-extra": "^1.0.1",
     "rc-align": "2.x",
     "rc-animate": "2.x",
     "rc-util": "4.x",
@@ -41,7 +42,7 @@
     "react-dom": "15.6.1",
     "react-error-overlay": "1.0.9",
     "style-loader": "0.18.2",
-    "styled-components": "^2.1.1",
+    "styled-components": "^2.1.2",
     "sw-precache-webpack-plugin": "0.11.3",
     "url-loader": "0.5.9",
     "webpack": "2.6.1",
@@ -58,12 +59,16 @@
     "cover": "jest --env=jsdom  --coverage"
   },
   "devDependencies": {
+    "babel-plugin-react-flow-props-to-prop-types": "^0.15.0",
     "chai": "^4.1.0",
     "enzyme": "^2.9.1",
-    "flow-bin": "0.51.0",
+    "flow-bin": "^0.53.1",
     "identity-obj-proxy": "^3.0.0",
+    "install": "^0.10.1",
     "jest-cli": "^20.0.4",
     "jest-styled-components": "^4.2.2",
+    "npm": "^5.3.0",
+    "pwd": "^0.15.0",
     "react-test-renderer": "^15.6.1",
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^17.0.0",
@@ -107,6 +112,9 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      "react-flow-props-to-prop-types"
     ]
   },
   "eslintConfig": {
