--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "0.28.4",
     "debug": "^2.6.8",
     "dotenv": "4.0.0",
+    "dragdealer": "^0.9.9",
     "eslint": "3.19.0",
     "eslint-config-react-app": "1.0.5",
     "eslint-loader": "1.7.1",
@@ -28,6 +29,7 @@
     "html-webpack-plugin": "2.29.0",
     "immutable": "3.8.1",
     "jest": "^20.0.4",
+    "jquery": "^3.2.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
