修改：   *  增加依赖包

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "classnames": "^2.2.5",
+    "css-animation": "^1.4.1",
     "css-loader": "0.28.4",
     "debug": "^2.6.8",
     "dotenv": "4.0.0",
@@ -37,6 +39,7 @@
     "prop-types-extra": "^1.0.1",
     "rc-align": "2.x",
     "rc-animate": "2.x",
+    "rc-tree": "^1.7.4",
     "rc-util": "4.x",
     "react": "15.6.1",
     "react-dev-utils": "3.0.2",
