修改：   * 升级react版本到16。   * 将树计算的部分提取到uitls中，方便进行单元测试。

--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "rc-align": "2.x",
     "rc-animate": "2.x",
     "rc-util": "4.x",
-    "react": "15.6.1",
+    "react": "^16.0.0",
     "react-dev-utils": "3.0.2",
-    "react-dom": "15.6.1",
+    "react-dom": "^16.0.0",
     "react-error-overlay": "1.0.9",
     "style-loader": "0.18.2",
     "styled-components": "^2.1.2",
@@ -64,13 +64,14 @@
   "devDependencies": {
     "babel-plugin-react-flow-props-to-prop-types": "^0.15.0",
     "chai": "^4.1.0",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
     "flow-bin": "^0.53.1",
     "identity-obj-proxy": "^3.0.0",
     "install": "^0.10.1",
     "jest-cli": "^20.0.4",
     "jest-styled-components": "^4.2.2",
-    "react-test-renderer": "^15.6.1",
+    "react-test-renderer": "^16.0.0",
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^17.0.0",
     "stylelint-processor-styled-components": "^0.2.1",
