--- a/package.json
+++ b/package.json
@@ -3,14 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "rc-align": "2.x",
+    "rc-animate": "2.x",
+    "rc-util": "4.x",
+    "react": "^16.0.0",
+    "react-dev-utils": "3.0.2",
+    "react-dom": "^16.0.0",
+    "react-error-overlay": "1.0.9",
+    "style-loader": "0.18.2",
+    "styled-components": "^2.1.2",
+    "sv-test-utils": "^0.1.0"
+  },
+  "author": "ysstech",
+  "scripts": {
+    "lint:css": "stylelint './src/widgets/**/*.js'",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom",
+    "cover": "jest --env=jsdom  --coverage"
+  },
+  "devDependencies": {
+    "sw-precache-webpack-plugin": "0.11.3",
+    "url-loader": "0.5.9",
+    "webpack": "2.6.1",
+    "webpack-dev-server": "2.5.0",
+    "webpack-manifest-plugin": "1.1.0",
+    "whatwg-fetch": "2.0.3",
     "autoprefixer": "7.1.1",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-react-app": "3.0.1",
     "babel-runtime": "6.23.0",
+    "babel-plugin-react-flow-props-to-prop-types": "^0.15.0",
+    "babel-preset-react-app": "^3.1.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.5",
@@ -31,39 +58,12 @@
     "html-webpack-plugin": "2.29.0",
     "immutable": "3.8.1",
     "jest": "^20.0.4",
-    "jquery": "^3.2.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
     "promise": "7.1.1",
     "prop-types": "^15.5.10",
     "prop-types-extra": "^1.0.1",
-    "rc-align": "2.x",
-    "rc-animate": "2.x",
-    "rc-util": "4.x",
-    "react": "^16.0.0",
-    "react-dev-utils": "3.0.2",
-    "react-dom": "^16.0.0",
-    "react-error-overlay": "1.0.9",
-    "style-loader": "0.18.2",
-    "styled-components": "^2.1.2",
-    "sw-precache-webpack-plugin": "0.11.3",
-    "url-loader": "0.5.9",
-    "webpack": "2.6.1",
-    "webpack-dev-server": "2.5.0",
-    "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.3"
-  },
-  "author": "ysstech",
-  "scripts": {
-    "lint:css": "stylelint './src/widgets/**/*.js'",
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "cover": "jest --env=jsdom  --coverage"
-  },
-  "devDependencies": {
-    "babel-plugin-react-flow-props-to-prop-types": "^0.15.0",
     "chai": "^4.1.0",
     "enzyme": "^3.1.1",
     "enzyme-adapter-react-16": "^1.0.0",
