--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
-      "!src/**/demo.js"
+      "!src/**/demo*.js"
     ],
     "setupFiles": [
       "<rootDir>/config/polyfills.js"
