--- a/package.json
+++ b/package.json
@@ -22,29 +22,25 @@
     "cover": "node scripts/test.js --env=jsdom  --coverage"
   },
   "devDependencies": {
-    "sv-test-utils": "^0.1.3",
-    "sw-precache-webpack-plugin": "0.11.3",
-    "url-loader": "0.5.9",
-    "webpack": "2.6.1",
-    "webpack-dev-server": "2.5.0",
-    "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.3",
     "autoprefixer": "7.1.1",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
-    "babel-polyfill": "6.26.0",
-    "babel-runtime": "6.23.0",
     "babel-plugin-react-flow-props-to-prop-types": "0.15.0",
+    "babel-polyfill": "6.26.0",
     "babel-preset-react-app": "3.1.0",
+    "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chai": "4.1.0",
     "chalk": "1.1.3",
     "classnames": "2.2.5",
     "css-animation": "1.4.1",
     "css-loader": "0.28.4",
     "debug": "2.6.8",
     "dotenv": "4.0.0",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "eslint": "3.19.0",
     "eslint-config-react-app": "1.0.5",
     "eslint-loader": "1.7.1",
@@ -54,29 +50,33 @@
     "eslint-plugin-react": "7.1.0",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
+    "flow-bin": "0.57.3",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "identity-obj-proxy": "3.0.0",
     "immutable": "3.8.1",
+    "install": "0.10.1",
     "jest": "20.0.4",
+    "jest-cli": "20.0.4",
+    "jest-styled-components": "4.2.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
     "promise": "7.1.1",
     "prop-types": "15.5.10",
     "prop-types-extra": "1.0.1",
-    "chai": "4.1.0",
-    "enzyme": "3.1.1",
-    "enzyme-adapter-react-16": "1.0.0",
-    "flow-bin": "0.57.3",
-    "identity-obj-proxy": "3.0.0",
-    "install": "0.10.1",
-    "jest-cli": "20.0.4",
-    "jest-styled-components": "4.2.2",
     "react-test-renderer": "16.0.0",
     "stylelint": "8.0.0",
     "stylelint-config-standard": "17.0.0",
     "stylelint-processor-styled-components": "0.2.1",
-    "vx-mock": "0.1.7"
+    "sv-test-utils": "^0.1.3",
+    "sw-precache-webpack-plugin": "0.11.3",
+    "url-loader": "0.5.9",
+    "vx-mock": "0.1.7",
+    "webpack": "2.6.1",
+    "webpack-dev-server": "2.5.0",
+    "webpack-manifest-plugin": "1.1.0",
+    "whatwg-fetch": "2.0.3"
   },
   "jest": {
     "collectCoverageFrom": [
