--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "sv-ui",
-  "version": "0.1.0",
-  "private": true,
+  "name": "sv-widget",
+  "version": "1.0.0",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "classnames": "2.2.5",
+    "css-animation": "1.4.1",
+    "prop-types": "15.5.10",
+    "prop-types-extra": "1.0.1",
     "rc-align": "2.x",
     "rc-animate": "2.x",
     "rc-util": "4.x",
-    "react": "16.0.0",
+    "react": "^16.2.0",
     "react-dev-utils": "3.0.2",
-    "react-dom": "16.0.0",
+    "react-dom": "^16.2.0",
     "react-error-overlay": "1.0.9",
     "style-loader": "0.18.2",
-    "styled-components": "2.1.2"
+    "styled-components": "2.1.2",
+    "warning": "^3.0.0"
   },
   "author": "ysstech",
   "scripts": {
@@ -28,14 +33,11 @@
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-plugin-react-flow-props-to-prop-types": "0.15.0",
-    "babel-polyfill": "6.26.0",
     "babel-preset-react-app": "3.1.0",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chai": "4.1.0",
     "chalk": "1.1.3",
-    "classnames": "2.2.5",
-    "css-animation": "1.4.1",
     "css-loader": "0.28.4",
     "debug": "2.6.8",
     "dotenv": "4.0.0",
@@ -52,6 +54,14 @@
     "file-loader": "0.11.2",
     "flow-bin": "0.57.3",
     "fs-extra": "3.0.1",
+    "gulp": "3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-changed": "3",
+    "gulp-flowtype": "1",
+    "gulp-newer": "1",
+    "gulp-rename": "1.2.2",
+    "gulp-uglify": "2",
+    "gulp-watch": "4",
     "html-webpack-plugin": "2.29.0",
     "identity-obj-proxy": "3.0.0",
     "immutable": "3.8.1",
@@ -63,8 +73,7 @@
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
     "promise": "7.1.1",
-    "prop-types": "15.5.10",
-    "prop-types-extra": "1.0.1",
+    "pump": "1.0.2",
     "react-test-renderer": "16.0.0",
     "stylelint": "8.0.0",
     "stylelint-config-standard": "17.0.0",
@@ -114,6 +123,11 @@
       "jsx"
     ]
   },
+  "main": "dist",
+  "files": [
+    "dist",
+    "interface"
+  ],
   "babel": {
     "presets": [
       "react-app"
