--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sv-widget",
   "version": "1.0.3",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
+    "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
     "css-animation": "1.4.1",
     "prop-types": "15.5.10",
@@ -10,9 +10,8 @@
     "rc-align": "2.x",
     "rc-animate": "2.x",
     "rc-util": "4.x",
-    "react": "^16.2.0",
-    "react-dev-utils": "3.0.2",
-    "react-dom": "^16.2.0",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
     "react-error-overlay": "1.0.9",
     "style-loader": "0.18.2",
     "styled-components": "2.1.2",
@@ -27,33 +26,51 @@
     "cover": "node scripts/test.js --env=jsdom  --coverage"
   },
   "devDependencies": {
-    "autoprefixer": "7.1.1",
-    "babel-core": "6.25.0",
+    "autoprefixer": "7.1.6",
+    "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
-    "babel-plugin-react-flow-props-to-prop-types": "0.15.0",
-    "babel-preset-react-app": "3.1.0",
-    "babel-runtime": "6.23.0",
+    "babel-preset-react-app": "^3.1.0",
+    "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chai": "4.1.0",
     "chalk": "1.1.3",
-    "css-loader": "0.28.4",
-    "debug": "2.6.8",
+    "css-loader": "0.28.7",
     "dotenv": "4.0.0",
+    "eslint": "4.10.0",
+    "eslint-config-react-app": "^2.0.1",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.39.1",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.4.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "fs-extra": "3.0.1",
+    "html-webpack-plugin": "2.29.0",
+    "isomorphic-fetch": "^2.2.1",
+    "jest": "20.0.4",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.8",
+    "promise": "8.0.1",
+    "raf": "3.4.0",
+    "react": "^16.2.0",
+    "react-dev-utils": "^4.2.1",
+    "react-dom": "^16.2.0",
+    "style-loader": "0.19.0",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "url-loader": "0.6.2",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4",
+    "webpack-manifest-plugin": "1.3.2",
+    "whatwg-fetch": "2.0.3",
+    "babel-plugin-react-flow-props-to-prop-types": "0.15.0",
+    "chai": "4.1.0",
+    "debug": "2.6.8",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
-    "eslint": "3.19.0",
-    "eslint-config-react-app": "1.0.5",
-    "eslint-loader": "1.7.1",
-    "eslint-plugin-flowtype": "2.34.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "5.0.3",
-    "eslint-plugin-react": "7.1.0",
-    "extract-text-webpack-plugin": "2.1.2",
-    "file-loader": "0.11.2",
     "flow-bin": "0.57.3",
-    "fs-extra": "3.0.1",
     "gulp": "3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-changed": "3",
@@ -62,30 +79,18 @@
     "gulp-rename": "1.2.2",
     "gulp-uglify": "2",
     "gulp-watch": "4",
-    "html-webpack-plugin": "2.29.0",
     "identity-obj-proxy": "3.0.0",
     "immutable": "3.8.1",
     "install": "0.10.1",
-    "jest": "20.0.4",
     "jest-cli": "20.0.4",
     "jest-styled-components": "4.2.2",
-    "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.0.0",
-    "postcss-loader": "2.0.6",
-    "promise": "7.1.1",
     "pump": "1.0.2",
     "react-test-renderer": "16.0.0",
     "stylelint": "8.0.0",
     "stylelint-config-standard": "17.0.0",
     "stylelint-processor-styled-components": "0.2.1",
     "sv-test-utils": "^0.1.3",
-    "sw-precache-webpack-plugin": "0.11.3",
-    "url-loader": "0.5.9",
-    "vx-mock": "0.1.7",
-    "webpack": "2.6.1",
-    "webpack-dev-server": "2.5.0",
-    "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.3"
+    "vx-mock": "0.1.7"
   },
   "jest": {
     "collectCoverageFrom": [
