--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "sv-widget",
-  "version": "1.0.3",
+  "version": "1.0.7",
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
     "css-animation": "1.4.1",
+    "dom-align": "1.6.4",
     "prop-types": "15.5.10",
     "prop-types-extra": "1.0.1",
-    "rc-align": "2.x",
-    "rc-animate": "2.x",
-    "rc-util": "4.x",
+    "rc-align": "2.3.4",
+    "rc-animate": "2.4.1",
+    "rc-util": "4.0.4",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-error-overlay": "1.0.9",
     "style-loader": "0.18.2",
     "styled-components": "2.1.2",
-    "warning": "^3.0.0"
+    "warning": "3.0.0"
   },
   "author": "ysstech",
   "scripts": {
@@ -31,14 +32,14 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.0",
+    "babel-preset-react-app": "3.1.0",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "eslint": "4.10.0",
-    "eslint-config-react-app": "^2.0.1",
+    "eslint-config-react-app": "2.0.1",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
@@ -48,16 +49,16 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "isomorphic-fetch": "^2.2.1",
+    "isomorphic-fetch": "2.2.1",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.2.0",
-    "react-dev-utils": "^4.2.1",
-    "react-dom": "^16.2.0",
+    "react": "16.2.0",
+    "react-dev-utils": "4.2.1",
+    "react-dom": "16.2.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -68,11 +69,11 @@
     "babel-plugin-react-flow-props-to-prop-types": "0.15.0",
     "chai": "4.1.0",
     "debug": "2.6.8",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme": "3.2.0",
+    "enzyme-adapter-react-16": "1.1.0",
     "flow-bin": "0.57.3",
     "gulp": "3.9.1",
-    "gulp-babel": "^6.1.2",
+    "gulp-babel": "6.1.2",
     "gulp-changed": "3",
     "gulp-flowtype": "1",
     "gulp-newer": "1",
@@ -89,7 +90,7 @@
     "stylelint": "8.0.0",
     "stylelint-config-standard": "17.0.0",
     "stylelint-processor-styled-components": "0.2.1",
-    "sv-test-utils": "^0.1.3",
+    "sv-test-utils": "0.1.3",
     "vx-mock": "0.1.7"
   },
   "jest": {
