--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "lint:css": "stylelint './src/widgets/**/*.js'",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "flow": "flow",
     "test": "node scripts/test.js --env=jsdom",
-    "cover": "node scripts/test.js --env=jsdom  --coverage"
+    "cover": "node scripts/test.js --env=jsdom  --coverage",
+    "clean": "npx shx rm -rf dist/ npm-shrinkwrap.all.json",
+    "dist": "npm run clean && npx cross-env BABEL_ENV=production gulp",
+    "lock:publish": "npx shx cp npm-shrinkwrap.json npm-shrinkwrap.all.json && npm prune --production && npm shrinkwrap",
+    "prepublishOnly": "npm run dist && npm run lock:publish",
+    "postpublish": "npx shx cp npm-shrinkwrap.all.json npm-shrinkwrap.json && npm run clean && npm install"
   },
   "devDependencies": {
-    "style-loader": "0.19.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -38,6 +43,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chai": "4.1.0",
     "chalk": "1.1.3",
+    "cross-env": "5.1.4",
     "css-loader": "0.28.7",
     "debug": "2.6.8",
     "dotenv": "4.0.0",
@@ -80,6 +86,8 @@
     "react-dev-utils": "4.2.1",
     "react-dom": "16.2.0",
     "react-test-renderer": "16.0.0",
+    "shx": "0.2.2",
+    "style-loader": "0.19.0",
     "stylelint": "8.0.0",
     "stylelint-config-standard": "17.0.0",
     "stylelint-processor-styled-components": "0.2.1",
@@ -144,5 +152,9 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "engines": {
+    "node": ">=8.0.0",
+    "npm": ">=5.2.0"
   }
 }
