--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "jest": "20.0.4",
     "jest-cli": "20.0.4",
     "jest-styled-components": "4.2.2",
+    "jsdom": "^11.7.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
