--- a/.flowconfig
+++ b/.flowconfig
@@ -10,9 +10,9 @@ src
 [libs]
 flow-typed/
 src/interface/
-node_modules/vx-mock/interface
-node_modules/vx-var-utils/interface
-node_modules/sv-test-utils/interface
+node_modules/@lugia/jverify/interface
+node_modules/@lugia/type-utils/interface
+node_modules/@lugia/react-test-utils/interface
 [options]
 module.name_mapper='^core/\(.*\)$' -> '<PROJECT_ROOT>/src/core/\1'
 
