--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   },
   "author": "ysstech",
   "scripts": {
+    "precommit": "npm run lint-staged",
+    "prettier": "prettier --write ./src/**/**/**/*",
+    "lint": "eslint --ext .js src mock tests && npm run lint:style",
+    "lint:fix": "eslint --fix --ext .js src mock tests && npm run lint:style",
+    "lint-staged": "lint-staged",
+    "lint-staged:js": "eslint --ext .js",
     "lint:css": "stylelint './src/widgets/**/*.js'",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
@@ -32,6 +38,9 @@
     "postpublish": "npx shx cp npm-shrinkwrap.all.json npm-shrinkwrap.json && npm run clean && npm install"
   },
   "devDependencies": {
+    "lint-staged": "^6.0.0",
+    "husky": "^0.14.3",
+
     "@lugia/jverify": "^1.0.0",
     "@lugia/react-test-utils": "^1.0.0",
     "autoprefixer": "7.1.6",
@@ -100,6 +109,13 @@
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
+  },
+  "lint-staged": {
+    "**/**/*.{js,jsx}": [
+      "prettier --write",
+      "git add"
+    ],
+    "**/**/*.{js,jsx}": "lint-staged:js"
   },
   "jest": {
     "collectCoverageFrom": [
