--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sv-widget",
+  "name": "@lugia/lugia-web",
   "version": "1.0.43",
   "dependencies": {
     "@lugia/type-utils": "^1.0.1",
@@ -20,9 +20,9 @@
   "author": "ysstech",
   "scripts": {
     "precommit": "npm run lint-staged",
-    "prettier": "prettier --write ./src/**/**/**/*",
-    "lint": "eslint --ext .js src mock tests && npm run lint:style",
-    "lint:fix": "eslint --fix --ext .js src mock tests && npm run lint:style",
+    "prettier": "prettier --write src/*/*/*.js src/*.js src/*/*/*/*.js",
+    "lint": "eslint --ext .js src mock tests && npm run lint:css",
+    "lint:fix": "eslint --fix --ext .js src mock tests && npm run lint:css",
     "lint-staged": "lint-staged",
     "lint-staged:js": "eslint --ext .js",
     "lint:css": "stylelint './src/widgets/**/*.js'",
@@ -38,10 +38,7 @@
     "postpublish": "npx shx cp npm-shrinkwrap.all.json npm-shrinkwrap.json && npm run clean && npm install"
   },
   "devDependencies": {
-    "lint-staged": "^6.0.0",
-    "husky": "^0.14.3",
-
-    "@lugia/jverify": "^1.0.0",
+    "@lugia/jverify": "1.0.1",
     "@lugia/react-test-utils": "^1.0.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
@@ -80,6 +77,7 @@
     "gulp-uglify": "2",
     "gulp-watch": "4",
     "html-webpack-plugin": "2.29.0",
+    "husky": "^0.14.3",
     "identity-obj-proxy": "3.0.0",
     "immutable": "3.8.1",
     "install": "0.10.1",
@@ -88,9 +86,11 @@
     "jest-cli": "20.0.4",
     "jest-styled-components": "4.2.2",
     "jsdom": "^11.7.0",
+    "lint-staged": "^6.0.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
+    "prettier": "^1.13.5",
     "promise": "8.0.1",
     "pump": "1.0.2",
     "raf": "3.4.0",
@@ -111,10 +111,6 @@
     "whatwg-fetch": "2.0.3"
   },
   "lint-staged": {
-    "**/**/*.{js,jsx}": [
-      "prettier --write",
-      "git add"
-    ],
     "**/**/*.{js,jsx}": "lint-staged:js"
   },
   "jest": {
@@ -166,9 +162,6 @@
     "plugins": [
       "react-flow-props-to-prop-types"
     ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "engines": {
     "node": ">=8.0.0",
