--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,12 @@
 {
-  "processors": ["stylelint-processor-styled-components"],
+  "processors": [
+    "stylelint-processor-styled-components"
+  ],
   "extends": "stylelint-config-standard",
-  "syntax": "scss"
+  "syntax": "scss",
+  "rules": {
+    "declaration-block-semicolon-newline-after": null,
+    "no-eol-whitespace": null,
+    "rule-empty-line-before": null
+  }
 }
