修改：  * flow配置；  * 将flow纳入提交检查；  * 测试用例。

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@lugia/type-utils": "^1.0.1",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
+    "core-js": "^2.5.7",
     "css-animation": "1.4.1",
     "prop-types": "15.5.10",
     "prop-types-extra": "1.0.1",
@@ -19,7 +20,7 @@
   },
   "author": "ysstech",
   "scripts": {
-    "precommit": "npm run lint-staged",
+    "precommit": "flow && npm run lint-staged",
     "prettier": "prettier --write",
     "lint": "eslint --ext .js src mock tests",
     "lint:fix": "eslint --fix --ext .js src mock tests",
@@ -65,8 +66,9 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
-    "flow-bin": "0.57.3",
+    "flow-bin": "0.74.0",
     "fs-extra": "3.0.1",
+    "global": "^4.3.2",
     "gulp": "3.9.1",
     "gulp-babel": "6.1.2",
     "gulp-changed": "3",
@@ -86,7 +88,6 @@
     "jest-styled-components": "4.2.2",
     "jsdom": "^11.7.0",
     "lint-staged": "^6.0.0",
-    "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "prettier": "^1.13.5",
