修改：   * 删除flow检查

--- a/package.json
+++ b/package.json
@@ -115,7 +115,8 @@
       "prettier",
       "lint:fix",
       "lint",
-      "lint:css"
+      "lint:css",
+      "flow"
     ]
   },
   "jest": {
