--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "author": "ysstech",
   "scripts": {
-    "precommit": "npm run lint-staged",
     "prettier": "prettier --write",
     "lint": "eslint --ext .js src mock tests",
     "lint:fix": "eslint --fix --ext .js src mock tests",
@@ -77,7 +76,7 @@
     "gulp-uglify": "2",
     "gulp-watch": "4",
     "html-webpack-plugin": "2.29.0",
-    "husky": "^0.14.3",
+    "husky": "^1.0.0-rc.9",
     "identity-obj-proxy": "3.0.0",
     "immutable": "3.8.1",
     "install": "0.10.1",
@@ -109,13 +108,17 @@
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint-staged"
+    }
+  },
   "lint-staged": {
     "src/**/*.js": [
       "prettier",
       "lint:fix",
       "lint",
-      "lint:css",
-      "flow"
+      "lint:css"
     ]
   },
   "jest": {
