--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
+    "babel-jest": "23.4.2",
     "babel-loader": "7.1.2",
     "babel-plugin-react-flow-props-to-prop-types": "0.15.0",
     "babel-preset-react-app": "3.1.0",
@@ -54,7 +54,7 @@
     "css-loader": "0.28.7",
     "debug": "2.6.8",
     "dotenv": "4.0.0",
-    "enzyme": "3.2.0",
+    "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "eslint": "4.10.0",
     "eslint-config-react-app": "2.0.1",
@@ -81,10 +81,10 @@
     "immutable": "3.8.1",
     "install": "0.10.1",
     "isomorphic-fetch": "2.2.1",
-    "jest": "20.0.4",
-    "jest-cli": "20.0.4",
-    "jest-styled-components": "4.2.2",
-    "jsdom": "^11.7.0",
+    "jest": "23.4.2",
+    "jest-cli": "23.4.2",
+    "jest-styled-components": "5.0.0",
+    "jsdom": "11.12.0",
     "lint-staged": "7.2.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
