--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "classnames": "2.2.5",
     "core-js": "^2.5.7",
     "css-animation": "1.4.1",
+    "enquire.js": "^2.1.6",
     "prop-types": "15.5.10",
     "prop-types-extra": "1.0.1",
     "rc-align": "2.3.4",
