--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "debug": "2.6.8",
     "dotenv": "4.0.0",
     "enzyme": "3.3.0",
-    "enzyme-adapter-react-16": "1.1.1",
+    "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "2.0.1",
     "eslint-loader": "1.9.0",
