--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "start": "lugia-scripts start",
     "build": "lugia-scripts build",
     "flow": "flow",
+    "flow-typed": "npx shx rm -rf flow-typed/npm && flow-typed install --overwrite || true",
     "test": "node scripts/test.js --env=jsdom",
     "cover": "node scripts/test.js --env=jsdom  --coverage",
     "clean": "npx shx rm -rf dist/ npm-shrinkwrap.all.json",
@@ -61,6 +62,7 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "flow-bin": "0.81.0",
+    "flow-typed": "^2.5.1",
     "fs-extra": "3.0.1",
     "global": "^4.3.2",
     "gulp": "3.9.1",
