--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types-extra": "1.0.1",
     "rc-align": "2.4.3",
     "rc-animate": "2.4.1",
+    "rc-table": "^6.4.0",
     "rc-util": "4.0.4",
     "react": "16.5.2",
     "react-dom": "16.5.2",
@@ -36,8 +37,8 @@
     "dist": "npm run clean && npx cross-env BABEL_ENV=production gulp"
   },
   "devDependencies": {
-    "@lugia/mega-scripts": "^1.0.0",
     "@lugia/jverify": "1.0.6",
+    "@lugia/mega-scripts": "^1.0.0",
     "@lugia/react-test-utils": "^1.0.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
