--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lugia/lugia-web",
-  "version": "1.0.43-13",
+  "version": "1.0.45",
   "dependencies": {
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
@@ -15,8 +15,8 @@
     "rc-animate": "2.4.1",
     "rc-table": "^6.4.0",
     "rc-util": "4.0.4",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-error-overlay": "1.0.9",
     "styled-components": "3.4.9",
     "warning": "3.0.0"
