--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "flow-typed": "npx shx rm -rf flow-typed/npm && flow-typed install --overwrite || true",
     "test": "node scripts/test.js --env=jsdom",
     "cover": "node scripts/test.js --env=jsdom  --coverage",
-    "clean": "npx shx rm -rf dist/ npm-shrinkwrap.all.json",
+    "clean": "npx shx rm -rf dist/ interface/ npm-shrinkwrap.all.json",
     "dist": "npm run clean && npx cross-env BABEL_ENV=production gulp"
   },
   "devDependencies": {
     "@lugia/jverify": "1.0.6",
-    "@lugia/mega-scripts": "^1.0.0",
+    "@lugia/mega-scripts": "^1.1.1",
     "@lugia/react-test-utils": "^1.0.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
