--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "rc-animate": "2.4.1",
     "rc-table": "^6.4.0",
     "rc-util": "4.0.4",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
     "react-error-overlay": "1.0.9",
     "styled-components": "3.4.9",
     "warning": "3.0.0"
+  },
+  "peerDependencies": {
+    "react": ">16.0.0",
+    "react-dom": ">16.0.0"
   },
   "author": "ysstech",
   "scripts": {
@@ -87,6 +89,8 @@
     "prettier": "^1.13.5",
     "promise": "8.0.1",
     "pump": "1.0.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "raf": "3.4.0",
     "react-test-renderer": "16.5.2",
     "shx": "0.2.2",
