增加 flow-typed moment

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "start": "lugia-scripts start",
     "build": "lugia-scripts build",
     "flow": "flow",
-    "flow-typed": "npx shx rm -rf flow-typed/npm && flow-typed install --overwrite || true",
+    "flow-typed": "flow-typed",
+    "reset-flow-typed": "npx shx rm -rf flow-typed/npm && flow-typed install --overwrite || true",
     "test": "node scripts/test.js --env=jsdom",
     "cover": "node scripts/test.js --env=jsdom  --coverage",
     "clean": "npx shx rm -rf dist/ interface/ npm-shrinkwrap.all.json",
