--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "core-js": "^2.5.7",
     "css-animation": "1.4.1",
     "enquire.js": "^2.1.6",
+    "flow": "^0.2.3",
+    "flow-bin": "^0.87.0",
     "moment": "^2.22.2",
     "prop-types": "15.5.10",
     "prop-types-extra": "1.0.1",
@@ -68,7 +70,6 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
-    "flow-bin": "0.81.0",
     "flow-typed": "^2.5.1",
     "fs-extra": "3.0.1",
     "global": "^4.3.2",
@@ -96,6 +97,7 @@
     "react-dom": "^16.6.3",
     "raf": "3.4.0",
     "react-test-renderer": "16.5.2",
+    "rimraf": "^2.6.2",
     "shx": "0.2.2",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "17.0.0",
