--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "prop-types-extra": "1.0.1",
     "rc-align": "2.4.3",
     "rc-animate": "2.4.1",
+    "rc-pagination": "1.17.3",
+    "rc-select": "^8.6.4",
     "rc-table": "^6.4.0",
     "rc-util": "4.0.4",
     "react-error-overlay": "1.0.9",
