--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "core-js": "^2.5.7",
     "css-animation": "1.4.1",
     "enquire.js": "^2.1.6",
+    "moment": "^2.22.2",
     "prop-types": "15.5.10",
     "prop-types-extra": "1.0.1",
     "rc-align": "2.4.3",
     "rc-animate": "2.4.1",
+    "rc-pagination": "1.17.3",
+    "rc-select": "^8.6.4",
+    "rc-table": "^6.4.0",
     "rc-util": "4.0.4",
     "react": "16.5.2",
     "react-dom": "16.5.2",
@@ -36,8 +40,8 @@
     "dist": "npm run clean && npx cross-env BABEL_ENV=production gulp"
   },
   "devDependencies": {
-    "@lugia/mega-scripts": "^1.0.0",
     "@lugia/jverify": "1.0.6",
+    "@lugia/mega-scripts": "^1.0.0",
     "@lugia/react-test-utils": "^1.0.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
