--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "raf": "3.4.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-test-renderer": "16.5.2",
+    "react-test-renderer": "^16.8.2",
     "rimraf": "^2.6.2",
     "shx": "0.2.2",
     "stylelint": "^9.3.0",
