--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "css-animation": "1.4.1",
     "enquire.js": "^2.1.6",
     "events": "^3.0.0",
-    "flow": "^0.2.3",
-    "flow-bin": "^0.87.0",
     "moment": "^2.22.2",
     "prop-types": "15.5.10",
     "prop-types-extra": "1.0.1",
@@ -37,7 +35,7 @@
     "lint:css": "stylelint './src/widgets/**/*.js'",
     "start": "lugia-scripts start",
     "build": "lugia-scripts build",
-    "flow": "flow",
+    "flow": "flow --show-all-errors > flow-error-detail.log",
     "flow-typed": "flow-typed",
     "reset-flow-typed": "npx shx rm -rf flow-typed/npm && flow-typed install --overwrite || true",
     "test": "node scripts/test.js --env=jsdom",
@@ -71,6 +69,7 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
+    "flow-bin": "^0.93.0",
     "flow-typed": "^2.5.1",
     "fs-extra": "3.0.1",
     "global": "^4.3.2",
