--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lugia/lugia-web",
-  "version": "1.0.109",
+  "version": "1.0.110-1",
   "dependencies": {
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
@@ -19,7 +19,7 @@
     "rc-table": "^6.4.0",
     "rc-util": "4.0.4",
     "react-error-overlay": "1.0.9",
-    "styled-components": "3.4.9",
+    "styled-components": "^4.2.0",
     "warning": "3.0.0"
   },
   "peerDependencies": {
