修正BUG：   * 动画效果的配置在v4版的styled-component里面要采用css``进行处理。

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -6,7 +6,9 @@
   "syntax": "scss",
   "rules": {
     "declaration-block-semicolon-newline-after": null,
+
     "no-eol-whitespace": null,
-    "rule-empty-line-before": null
+    "rule-empty-line-before": null,
+    "indentation": null
   }
 }
