--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "classnames": "2.2.5",
     "core-js": "^2.5.7",
     "css-animation": "1.4.1",
+    "decamelize": "^3.2.0",
+    "deepmerge": "^3.2.0",
     "enquire.js": "^2.1.6",
     "events": "^3.0.0",
     "moment": "^2.22.2",
