--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@lugia/lugia-web",
   "version": "1.0.110-11",
   "dependencies": {
+    "@lugia/devtools-material": "^1.0.5",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
