--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "@lugia/devtools-material": "^1.0.6",
     "@lugia/math": "^1.0.3-alpha.2",
     "@lugia/object-utils": "^1.0.3-alpha.2",
-    "@lugia/theme-config": "^1.0.3-alpha.3",
-    "@lugia/theme-css-provider": "^1.0.3-alpha.4",
-    "@lugia/theme-hoc": "^1.0.3-alpha.4",
+    "@lugia/theme-config": "1.0.3",
+    "@lugia/theme-core": "1.0.3",
+    "@lugia/theme-css-provider": "1.0.3-alpha.6",
+    "@lugia/theme-hoc": "1.0.3",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
