--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "dependencies": {
     "@lugia/css": "^1.0.3-alpha.2",
     "@lugia/devtools-material": "^1.0.6",
-    "@lugia/math": "^1.0.3-alpha.2",
-    "@lugia/object-utils": "^1.0.3-alpha.2",
-    "@lugia/theme-config": "^1.0.3",
-    "@lugia/theme-css-hoc": "^1.0.4-y.0",
-    "@lugia/theme-hoc": "^1.0.4-y.0",
+    "@lugia/math": "^1.0.6",
+    "@lugia/object-utils": "^1.0.6",
+    "@lugia/theme-config": "^1.0.6",
+    "@lugia/theme-css-hoc": "^1.0.6",
+    "@lugia/theme-hoc": "^1.0.6",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
