--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@lugia/math": "^1.0.6",
     "@lugia/object-utils": "^1.0.7",
     "@lugia/theme-config": "^1.0.8",
-    "@lugia/theme-css-hoc": "^1.0.10",
+    "@lugia/theme-css-hoc": "^1.0.11",
     "@lugia/theme-hoc": "^1.0.8",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@lugia/jverify": "1.0.6",
+    "@lugia/lugiax-router": "^1.0.10",
     "@lugia/mega-scripts": "^1.3.3",
     "@lugia/react-test-utils": "^1.0.0",
     "autoprefixer": "7.1.6",
