修改：   * 使得Icon能够被继承。

--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "@lugia/lugia-web",
   "version": "1.0.110-14",
   "dependencies": {
-    "@lugia/css": "1.0.11",
+    "@lugia/css": "1.0.12",
     "@lugia/devtools-material": "^1.0.6",
     "@lugia/math": "^1.0.6",
     "@lugia/object-utils": "^1.0.7",
-    "@lugia/theme-config": "^1.0.12",
-    "@lugia/theme-core": "^1.0.12",
-    "@lugia/theme-css-hoc": "1.0.22",
-    "@lugia/theme-hoc": "1.0.17",
+    "@lugia/theme-config": "1.0.14",
+    "@lugia/theme-core": "1.0.14",
+    "@lugia/theme-css-hoc": "1.0.25",
+    "@lugia/theme-hoc": "1.0.19",
+    "@lugia/theme-hoc-devtools": "1.0.2",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
