修改：    * 获取themeProps的方式

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "@lugia/css": "1.0.12",
     "@lugia/devtools-material": "^1.0.6",
     "@lugia/math": "^1.0.6",
-    "@lugia/object-utils": "^1.0.7",
-    "@lugia/theme-config": "1.0.14",
-    "@lugia/theme-core": "1.0.14",
-    "@lugia/theme-css-hoc": "1.0.25",
-    "@lugia/theme-hoc": "1.0.19",
+    "@lugia/object-utils": "1.0.8",
+    "@lugia/theme-config": "1.0.15",
+    "@lugia/theme-core": "1.0.15",
+    "@lugia/theme-css-hoc": "^1.0.29",
+    "@lugia/theme-hoc": "^1.0.21",
     "@lugia/theme-hoc-devtools": "1.0.2",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
@@ -109,8 +109,8 @@
     "promise": "8.0.1",
     "pump": "1.0.2",
     "raf": "3.4.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-test-renderer": "^16.8.2",
     "rimraf": "^2.6.2",
     "shx": "0.2.2",
