修改：     * 更新theme依赖包版本；     * 调整代码适应新版本的ThemeAPI。 原因：    *  border 和 borderRadius 拆分配置。    *  getBorder getBorderRadius getBoxShadow的方法由@lugia/theme-css-hoc移动到@lugia/theme-utils包中。

--- a/.flowconfig
+++ b/.flowconfig
@@ -22,6 +22,7 @@ node_modules/@lugia/theme-config/interface
 node_modules/@lugia/theme-hoc/interface
 node_modules/@lugia/theme-core/interface
 node_modules/@lugia/theme-css-hoc/interface
+node_modules/@lugia/theme-utils/interface
 node_modules/@lugia/theme-hoc-devtools/interface
 [options]
 module.name_mapper='^core/\(.*\)$' -> '<PROJECT_ROOT>/src/core/\1'
