--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "@lugia/devtools-material": "^1.0.6",
     "@lugia/math": "^1.0.6",
     "@lugia/object-utils": "1.0.8",
-    "@lugia/theme-config": "1.0.16",
-    "@lugia/theme-core": "1.0.16",
-    "@lugia/theme-css-hoc": "^1.0.31",
-    "@lugia/theme-hoc": "1.0.22",
-    "@lugia/theme-hoc-devtools": "1.0.2",
+    "@lugia/theme-config": "1.0.17",
+    "@lugia/theme-core": "1.0.17",
+    "@lugia/theme-css-hoc": "1.0.34",
+    "@lugia/theme-hoc": "1.0.24",
+    "@lugia/theme-hoc-devtools": "1.0.3",
+    "@lugia/theme-utils": "1.0.1",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
