修改：   * 更新版本依赖。

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "@lugia/css": "^1.0.15",
     "@lugia/devtools-material": "^1.0.6",
     "@lugia/math": "^1.0.7",
-    "@lugia/object-utils": "^1.0.10",
+    "@lugia/object-utils": "1.0.11",
     "@lugia/ramada": "^1.0.1",
-    "@lugia/theme-config": "^1.0.23",
-    "@lugia/theme-css-hoc": "^1.0.46",
-    "@lugia/theme-hoc": "^1.0.33",
-    "@lugia/theme-hoc-devtools": "^1.0.3",
-    "@lugia/theme-utils": "^1.0.3",
+    "@lugia/theme-config": "1.0.24",
+    "@lugia/theme-core": "1.0.24",
+    "@lugia/theme-css-hoc": "1.0.47",
+    "@lugia/theme-hoc": "1.0.35",
+    "@lugia/theme-hoc-devtools": "1.0.4",
+    "@lugia/theme-utils": "1.0.4",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
