修改：   * 更新theme版本依赖。

--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "@lugia/lugia-web",
   "version": "1.1.0-32",
   "dependencies": {
-    "@lugia/css": "^1.0.17",
+    "@lugia/css": "1.0.18",
     "@lugia/math": "1.0.8",
-    "@lugia/object-utils": "^1.0.11",
+    "@lugia/object-utils": "1.0.12",
     "@lugia/ramada": "1.0.2",
-    "@lugia/theme-config": "1.0.32",
-    "@lugia/theme-core": "1.0.32",
-    "@lugia/theme-css-hoc": "^1.0.58",
-    "@lugia/theme-hoc": "1.0.43",
+    "@lugia/theme-config": "1.0.33",
+    "@lugia/theme-core": "1.0.33",
+    "@lugia/theme-css-hoc": "1.0.60",
+    "@lugia/theme-hoc": "1.0.44",
     "@lugia/theme-hoc-devtools": "1.0.7",
-    "@lugia/theme-utils": "1.0.6",
+    "@lugia/theme-utils": "1.0.7",
     "@lugia/type-utils": "^1.0.4",
     "babel-polyfill": "6.26.0",
     "classnames": "2.2.5",
