修改：   * 更新依赖。

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "dependencies": {
     "@lugia/css": "1.0.18",
     "@lugia/math": "1.0.8",
-    "@lugia/object-utils": "1.0.13",
+    "@lugia/object-utils": "1.0.14",
     "@lugia/ramada": "1.0.2",
-    "@lugia/theme-config": "^1.0.34",
-    "@lugia/theme-core": "^1.0.34",
-    "@lugia/theme-css-hoc": "^1.0.61",
-    "@lugia/theme-hoc": "^1.0.45",
+    "@lugia/theme-config": "1.0.35",
+    "@lugia/theme-core": "1.0.35",
+    "@lugia/theme-css-hoc": "1.0.62",
+    "@lugia/theme-hoc": "1.0.46",
     "@lugia/theme-hoc-devtools": "1.0.7",
     "@lugia/theme-utils": "1.0.7",
     "@lugia/type-utils": "^1.0.4",
